[gd_scene load_steps=23 format=3 uid="uid://rlq5hwrw102d"]

[ext_resource type="Script" path="res://player/player.gd" id="1_lsdd5"]
[ext_resource type="PackedScene" uid="uid://bbcuigtbmp25x" path="res://ui/main_activity.tscn" id="2_blcah"]
[ext_resource type="Texture2D" uid="uid://b34kvybv6j0bv" path="res://player/character.png" id="3_3as47"]
[ext_resource type="Shader" path="res://damageFlash.gdshader" id="3_4fihf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kn71t"]
size = Vector2(13, 15)

[sub_resource type="Animation" id="Animation_8u568"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_vfh8t"]
resource_name = "attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}

[sub_resource type="Animation" id="Animation_ai084"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_mxy7x"]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}

[sub_resource type="Animation" id="Animation_eiqrm"]
resource_name = "move"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"move"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hrqbd"]
_data = {
"RESET": SubResource("Animation_8u568"),
"attack": SubResource("Animation_vfh8t"),
"idle": SubResource("Animation_ai084"),
"jump": SubResource("Animation_mxy7x"),
"move": SubResource("Animation_eiqrm")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nngi2"]
resource_local_to_scene = true
shader = ExtResource("3_4fihf")
shader_parameter/flash_range = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_kcakt"]
atlas = ExtResource("3_3as47")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ne1yn"]
atlas = ExtResource("3_3as47")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wu1pk"]
atlas = ExtResource("3_3as47")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxln1"]
atlas = ExtResource("3_3as47")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_crqjo"]
atlas = ExtResource("3_3as47")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vt6w"]
atlas = ExtResource("3_3as47")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_a604b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcakt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ne1yn")
}],
"loop": true,
"name": &"attack",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu1pk")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxln1")
}],
"loop": true,
"name": &"jump",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_crqjo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vt6w")
}],
"loop": true,
"name": &"move",
"speed": 6.0
}]

[sub_resource type="Animation" id="Animation_2tg0f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/flash_range")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_xc8vj"]
resource_name = "flash"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/flash_range")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qvn0q"]
_data = {
"RESET": SubResource("Animation_2tg0f"),
"flash": SubResource("Animation_xc8vj")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_lsdd5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_kn71t")

[node name="Bullets" type="Node" parent="."]

[node name="MainActivity" parent="." instance=ExtResource("2_blcah")]

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hrqbd")
}
autoplay = "idle"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_nngi2")
sprite_frames = SubResource("SpriteFrames_a604b")
animation = &"idle"

[node name="Hit" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
collision_priority = 1.5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hit"]
polygon = PackedVector2Array(6, -4, 11, -5, 12, 2, 7, 7)
disabled = true

[node name="AnimationFlash" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qvn0q")
}

[connection signal="animation_finished" from="Animation" to="." method="_on_animation_animation_finished"]
[connection signal="area_entered" from="Hit" to="." method="_on_hit_area_entered"]
